--- a/projetoLojaRoupa/projetoLojaRoupa.csproj
+++ b/projetoLojaRoupa/projetoLojaRoupa.csproj
@@ -98,6 +98,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conexao.cs" />
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
